--- a/gb/16/9/19/n8316218.md
+++ b/gb/16/9/19/n8316218.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ycrtcl336/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ycrtcl336/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ycrtcl336/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ycrtcl336/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ycrtcl336/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ycrtcl336/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ycrtcl336/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ycrtcl336/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>重庆酉阳发现疑似上亿年三叶虫化石</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/ccp-virus-global-jytj_1200x800-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2016年09月19日讯】（大纪元记者杨一帆综合报导）近日，<ahref="https://github.com/ycrtcl336/djy/blob/master/gb/tag/%E9%87%8D%E5%BA%86%E9%85%89%E9%98%B3.md#1">重庆酉阳</a><ahref="https://github.com/ycrtcl336/djy/blob/master/gb/tag/%E5%8F%91%E7%8E%B0.md#1">发现</a><ahref="https://github.com/ycrtcl336/djy/blob/master/gb/tag/%E7%96%91%E4%BC%BC%E4%B8%8A%E4%BA%BF%E5%B9%B4.md#1">疑似上亿年</a><ahref="https://github.com/ycrtcl336/djy/blob/master/gb/tag/%E4%B8%89%E5%8F%B6%E8%99%AB%E5%8C%96%E7%9F%B3.md#1">三叶虫化石</a>，其头部触须清晰可见。2.8亿年前三叶虫化石上人的脚印之谜等，再次引发关注。</p>
-<p>据中新网报导，重庆市，酉阳土家族苗族自治县，毛坝乡毛坝村<ahref="https://github.com/ycrtcl336/djy/blob/master/gb/tag/%E5%8F%91%E7%8E%B0.md#1">发现</a>一奇特东西，这个长约70厘米，宽约3厘米的不明古生物化石，虽然有些受损，但轮廓清晰可见。</p>
-<p>该县文物管理所负责人带队实地查看，经技术员鉴定，此化石为“<ahref="https://github.com/ycrtcl336/djy/blob/master/gb/tag/%E4%B8%89%E5%8F%B6%E8%99%AB%E5%8C%96%E7%9F%B3.md#1">三叶虫化石</a>”。 上述负责人称，他们将派自然博物馆的专家到现场进行取样，“拿回进行深入研究。”</p>
+	<p>【大纪元2016年09月19日讯】（大纪元记者杨一帆综合报导）近日，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%8D%E5%BA%86%E9%85%89%E9%98%B3.md#1">重庆酉阳</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%91%E7%8E%B0.md#1">发现</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%91%E4%BC%BC%E4%B8%8A%E4%BA%BF%E5%B9%B4.md#1">疑似上亿年</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%89%E5%8F%B6%E8%99%AB%E5%8C%96%E7%9F%B3.md#1">三叶虫化石</a>，其头部触须清晰可见。2.8亿年前三叶虫化石上人的脚印之谜等，再次引发关注。</p>
+<p>据中新网报导，重庆市，酉阳土家族苗族自治县，毛坝乡毛坝村<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%91%E7%8E%B0.md#1">发现</a>一奇特东西，这个长约70厘米，宽约3厘米的不明古生物化石，虽然有些受损，但轮廓清晰可见。</p>
+<p>该县文物管理所负责人带队实地查看，经技术员鉴定，此化石为“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%89%E5%8F%B6%E8%99%AB%E5%8C%96%E7%9F%B3.md#1">三叶虫化石</a>”。 上述负责人称，他们将派自然博物馆的专家到现场进行取样，“拿回进行深入研究。”</p>
 <p>此前，陆媒2013年8月29日曾报导，河北省邢台沙河市发现距今约5亿年前的寒武纪三叶虫化石。这块化石中可辨别的三叶虫种类有蝴蝶虫、德氏虫和海百合。</p>
 <p>资料显示，三叶虫是一种六亿年前出现在古生代浅海中的甲壳类动物，约在二亿六千万年前已经绝种。人类生活的年代与三叶虫的时代相差二亿六千多万年，人类穿鞋的历史最多只有三四千年。但科学家们却多次在三叶虫化石上发现了人的脚印，有的脚印还穿着鞋。</p>
 <p>1968年6月，美国业余化石爱好者米斯特前往犹他州的羚羊泉搜集化石。当米斯特用锤子敲开一块4厘米厚的三叶虫化石时，里面非常清晰地有一只人类的脚印，而那个人还穿着皮鞋！这只皮鞋印长28厘米，宽8.5厘米。当时这只皮鞋似乎正踩着一只活的三叶虫。</p>
@@ -23,42 +23,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/5/9/30/n1070736.md#1">《揭开史前文明的面纱》Ⅰ 远古的足迹</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/12/6/28/n3622978.md#1">世外高人透露贵州“藏字石”真实来历</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/13/2/17/n3802337.md#1">史前文明探秘：2.8亿年前三叶虫上的鞋印</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/13/9/1/n3954054.md#1">河北现5亿年前三叶虫化石 史前文明藏天机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/5/9/30/n1070736.md#1">《揭开史前文明的面纱》Ⅰ 远古的足迹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/6/28/n3622978.md#1">世外高人透露贵州“藏字石”真实来历</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/2/17/n3802337.md#1">史前文明探秘：2.8亿年前三叶虫上的鞋印</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/1/n3954054.md#1">河北现5亿年前三叶虫化石 史前文明藏天机</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/4/n11701121.md#1" target="_blank">宁静：中共改编《天仙配》摧毁孝道败坏人伦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/14/n12475763.md#1">轮回转生名案：4岁娃难忘前生情 丈夫儿子来相认</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/9/30/n12442831.md#1">《圣经》与《推背图》预言的应验与变换3</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/9/3/n12378293.md#1">【西安事变?蒋宋夫妇】引狼入室 西安谋主</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/8/10/n12318958.md#1">【命理】怎样才能知道自己是做生意的命？</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/27/n12505839.md#1">【薇羽看世间】朱利安尼曾获讃“扫黑英雄”</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/27/n12506429.md#1">【重播】美智库研讨会：解救被奴役的中国民众</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/27/n12505861.md#1">【重播】川普在密西根州大选集会发表演讲</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/25/n12500201.md#1">【独家】红三代揭武汉百亿假黄金局中局</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/26/n12502785.md#1">地产大鳄恒大都出事了 专家：还送钱进中国？</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/26/n12502511.md#1">疫情之下 台湾两大航空公司仍成功获利</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/25/n12501492.md#1">迎候老婆高圆圆下班 赵又廷俏皮蹲下请安</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/27/n12504942.md#1">袁惟仁惊传跌倒再陷昏迷 住进加护病房</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/27/n12504715.md#1">TWICE盼为粉丝带来力量 正规二辑32区iTunes夺冠</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/26/n12502059.md#1">洗衣店时尚阿公阿嬷红到国外 引蔡英文拜访</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/26/n12503459.md#1">脾胃喜欢甜的 5种甘味食物补脾养胃、防胃病</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/27/n12505080.md#1">这只小狗会打撞球 真不是盖的</a></li>
-<li><a href="https://github.com/ycrtcl336/djy/blob/master/gb/20/10/24/n12498226.md#1">车评：美式豪华轿跑 2020 Cadillac CT5-V</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ycrtcl336/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ycrtcl336/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/19/n8316218.htm">重庆酉阳发现疑似上亿年三叶虫化石</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/19/n8316218.htm">重庆酉阳发现疑似上亿年三叶虫化石</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ycrtcl336/djy/blob/master/gb/16/9/19/n8316218.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ycrtcl336/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ycrtcl336/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ycrtcl336/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ycrtcl336/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ycrtcl336/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/9/19/n8316218.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
